antex-rs/tui/src/snapshots/antex_tui__app__agents_overview__tests__agents_overview_embedded.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 1097
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
  Shared agents unavailable
  This session isn’t connected to a shared background server.

› 1. Start background server  Open `antex agents` in another terminal afterward.
  2. Return to this session

  Starting a background server will not interrupt or move this session.
  Press enter to confirm or esc to go back
